# test-dynamic-djangoapp

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
dynamic_djangoapp/: apps.py  urls.py  views.py
dynamic_djangoapp/templates/dynamic_djangoapp/: hello.html
