[metadata]
name = test-dynamic-airavata-django-app
version = 0.0.1
description = POC Django app for testing dynamic loading

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 2.2

[options.entry_points]
airavata.djangoapp =
    dynamic_djangoapp = dynamic_djangoapp.apps:DynamicDjangoAppConfig
